fix preview overflow

--- a/src/scss/JSONEditor.scss
+++ b/src/scss/JSONEditor.scss
@@ -245,6 +245,7 @@
 		position: relative; float: right; width: 49%; min-height: 100px; margin: 0; padding: 12px;
 		border: 1px solid #ccc;
 		font-size: 13px;
+		overflow-x: auto;
 		&:before {
 			content: 'Preview'; display: block; position: absolute; margin: 0;
 			padding: 2px 6px 2px 8px;
